fix(personal-project-scss): Fix alignment

--- a/source/styles/components/component-3/base.scss
+++ b/source/styles/components/component-3/base.scss
@@ -103,7 +103,7 @@
                         color: $color-5;
                         font-size: 18px;
                         font-weight: 800;
-                        letter-spacing: -.4px;
+                        letter-spacing: -.26px;
 
                         @include font('rale');
                     }
